--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ a {
 }
 
 .footer-bg {
-  background: #334999 !important;
+  background: rgb(18, 32, 87) !important;
   background-size: 100% 100%;
 }
 
@@ -136,7 +136,6 @@ html {
   src: url(../fonts/Proxima\ Nova\ Font.otf);
 }
 body {
-  overflow-x: hidden;
   font-family: "proxima-nova", sans-serif;
   background-color: #F7F8FE;
 }
@@ -180,7 +179,7 @@ body {
   margin-right: 0;
   font-family: "proxima-nova", sans-serif;
   color: #000000;
-  padding: 8px 12px;
+  padding: 8px 18px;
   border-radius: 4px;
   text-transform: capitalize;
   font-weight: 700;
@@ -193,7 +192,7 @@ body {
   color: #334999 !important;
 }
 .siteHeader .navCustom .nav-item .dropdown-item:hover {
-  background-color: #242D39 !important;
+  background-color: #af281d !important;
   color: #fff;
 }
 .siteHeader .navCustom .nav-item .dropdown-item.active {
@@ -239,6 +238,12 @@ body {
   position: relative;
   display: block;
   margin-bottom: 15px;
+  padding: 25px 12px 12px 12px;
+  background-color: #242D39 !important;
+}
+.template-box h5 {
+  font-size: 18px;
+  font-weight: 700;
 }
 .template-box .overlay {
   position: absolute;
@@ -247,7 +252,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(45deg, rgba(39, 26, 109, 0.93), rgba(85, 8, 12, 0.34));
+  background: linear-gradient(45deg, rgba(21, 7, 97, 0.87), rgba(8, 74, 85, 0.67));
   opacity: 0;
   transition: all 0.3s ease-in;
   display: flex;
@@ -263,7 +268,35 @@ body {
 .template-box .overlay .text:hover {
   background-color: #af281d !important;
 }
+.template-box .circle {
+  display: flex;
+  position: absolute;
+  top: 7px;
+  left: 13px;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+  transition: all 0.3s ease;
+  opacity: 0.7;
+}
+.template-box .circle .box {
+  height: 10px;
+  width: 10px;
+  background: #fff;
+  border-radius: 50%;
+}
+.template-box .circle .box:nth-child(1) {
+  background: #cddc39;
+}
+.template-box .circle .box:nth-child(2) {
+  background: #ffc107;
+}
+.template-box .circle .box:nth-child(3) {
+  background: #03a9f4;
+}
 .template-box:hover .overlay {
+  opacity: 1;
+}
+.template-box:hover .circle {
   opacity: 1;
 }
 
