--- a/css/app.scss
+++ b/css/app.scss
@@ -20,7 +20,7 @@ a {
     color: $secondary;
 }
 
-.txt-ternary{
+.txt-ternary {
     color: $ternary;
 }
 
@@ -30,7 +30,7 @@ a {
 
 
 .footer-bg {
-    background:$secondary;
+    background: rgb(18 32 87) !important;
     background-size: 100% 100%;
 }
 
@@ -167,8 +167,7 @@ html {
     src: url(../fonts/Proxima\ Nova\ Font.otf);
 }
 
-body {
-    overflow-x: hidden;
+body { 
     font-family: "proxima-nova", sans-serif;
     background-color: #F7F8FE;
 }
@@ -228,7 +227,7 @@ body {
                 margin-right: 0;
                 font-family: 'proxima-nova', sans-serif;
                 color: #000000;
-                padding: 8px 12px;
+                padding: 8px 18px;
                 border-radius: 4px;
                 text-transform: capitalize;
                 font-weight: 700;
@@ -245,7 +244,7 @@ body {
 
             .dropdown-item {
                 &:hover {
-                    background-color: $primary ;
+                    background-color: $ternary ;
                     color: $white;
                 }
 
@@ -304,6 +303,12 @@ body {
     position: relative;
     display: block;
     margin-bottom: 15px;
+    padding: 25px 12px 12px 12px;
+    background-color: $primary;
+    h5{
+        font-size: 18px;
+        font-weight: 700;
+    }
     .overlay {
         position: absolute;
         background-color: #00000042;
@@ -311,27 +316,56 @@ body {
         bottom: 0;
         left: 0;
         right: 0;
-        background: linear-gradient(45deg, rgb(39 26 109 / 93%), rgb(85 8 12 / 34%));
+        background:linear-gradient(45deg, rgb(21 7 97 / 87%), rgb(8 74 85 / 67%));
         opacity: 0;
-        transition: all 0.3s ease-in ;
+        transition: all 0.3s ease-in;
         display: flex;
         justify-content: center;
         align-items: center;
+
         .text {
             background-color: #334999;
             border-radius: 5px;
             padding: 12px 15px;
             color: #fff;
-            &:hover{
+
+            &:hover {
                 background-color: $ternary;
             }
         }
     }
 
+    .circle {
+        display: flex;
+        position: absolute;
+        top: 7px;
+        left: 13px;
+        column-gap: 5px;
+        transition: all 0.3s ease;
+        opacity: 0.7;
+        .box {
+            height: 10px;
+            width: 10px;
+            background: #fff;
+            border-radius: 50%;
+            &:nth-child(1){
+                background: #cddc39;
+            }
+            &:nth-child(2){
+                background: #ffc107;
+            }
+            &:nth-child(3){
+                background: #03a9f4;
+            }
+        }
+    }
+
     &:hover {
-        .overlay {
-            
+        .overlay { 
             opacity: 1;
+        }
+        .circle {  
+           opacity: 1;
         }
     }
 }
