--- a/css/app.scss
+++ b/css/app.scss
@@ -2,7 +2,7 @@
 
 $primary: #242D39 !important;
 $secondary: #334999 !important;
-$ternary: #af281d !important;
+$ternary: #dd1f0d !important;
 $txt: #585858;
 $white: #fff;
 
@@ -28,9 +28,21 @@ a {
     background: $secondary ;
 }
 
+.bg-ternary {
+    background: $ternary ;
+}
+
+.bottomBar {
+    background: #2D2726;
+}
+
+.near-bottom {
+    background: #BAB7C7;
+}
+
 
 .footer-bg {
-    background: rgb(18 32 87) !important;
+    background: #393a3e !important;
     background-size: 100% 100%;
 }
 
@@ -167,9 +179,9 @@ html {
     src: url(../fonts/Proxima\ Nova\ Font.otf);
 }
 
-body { 
+body {
     font-family: "proxima-nova", sans-serif;
-    background-color: #F7F8FE;
+    background-color: #212529;
 }
 
 // top bar css
@@ -226,15 +238,14 @@ body {
             .nav-link {
                 margin-right: 0;
                 font-family: 'proxima-nova', sans-serif;
-                color: #000000;
+                color: $white;
                 padding: 8px 18px;
                 border-radius: 4px;
                 text-transform: capitalize;
-                font-weight: 700;
                 font-size: 16px;
 
                 &:hover {
-                    color: $ternary;
+                    color: red;
                 }
 
                 &.active {
@@ -299,16 +310,49 @@ body {
     }
 }
 
+.tempTitle {
+    color: $ternary;
+    font-family: system-ui, sans-serif;
+}
+
+.templates {
+    background: #BAB7C7;
+}
+.vh-50{
+    height: 50vh;
+}
+
+.ticket-row {
+    small {
+        color: #fff;
+    }
+
+    .event-title {
+        font-size: 1.3rem;
+        color: #ffffff !important;
+        letter-spacing: 0;
+        text-transform: uppercase;
+        line-height: 1.3;
+        &:hover{
+            color: $white!important;
+        }
+    }
+}
+
 .template-box {
     position: relative;
     display: block;
     margin-bottom: 15px;
     padding: 25px 12px 12px 12px;
-    background-color: $primary;
-    h5{
+    background-color: #242D39 !important;
+    border: 1px dashed #7e7766;
+
+    h5 {
         font-size: 18px;
         font-weight: 700;
+
     }
+
     .overlay {
         position: absolute;
         background-color: #00000042;
@@ -316,7 +360,7 @@ body {
         bottom: 0;
         left: 0;
         right: 0;
-        background:linear-gradient(45deg, rgb(21 7 97 / 87%), rgb(8 74 85 / 67%));
+        background: linear-gradient(45deg, rgb(21 7 97 / 87%), rgb(8 74 85 / 67%));
         opacity: 0;
         transition: all 0.3s ease-in;
         display: flex;
@@ -343,29 +387,34 @@ body {
         column-gap: 5px;
         transition: all 0.3s ease;
         opacity: 0.7;
+
         .box {
             height: 10px;
             width: 10px;
             background: #fff;
             border-radius: 50%;
-            &:nth-child(1){
+
+            &:nth-child(1) {
                 background: #cddc39;
             }
-            &:nth-child(2){
+
+            &:nth-child(2) {
                 background: #ffc107;
             }
-            &:nth-child(3){
+
+            &:nth-child(3) {
                 background: #03a9f4;
             }
         }
     }
 
     &:hover {
-        .overlay { 
+        .overlay {
             opacity: 1;
         }
-        .circle {  
-           opacity: 1;
+
+        .circle {
+            opacity: 1;
         }
     }
 }
@@ -489,6 +538,29 @@ footer {
     font-weight: 400;
     color: #ffffff;
     background: $secondary;
+    padding: 7px 18px;
+    border-radius: 4px;
+    -webkit-transition: all 0.3s ease-in;
+    -webkit-transition: 0.3s ease-in;
+    -webkit-transition: 0.2s ease-in;
+    -webkit-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+    text-decoration: none;
+    font-family: 'poppins-medium';
+
+    &:hover {
+        background: #af281d !important;
+        color: #ffffff !important;
+    }
+}
+
+
+.btn-theme-ternary {
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: #ffffff;
+    background: $ternary;
     padding: 7px 18px;
     border-radius: 4px;
     -webkit-transition: all 0.3s ease-in;
